<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/itemPopupMenu">

    <item
        android:id="@+id/btnMenuItemRemove"
        android:title="@string/remove" />
</menu>